--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,21 +1,9 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ai.navigation": "2.0.0",
-    "com.unity.cinemachine": "2.9.7",
-    "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.ar": "1.0.2",
-    "com.unity.feature.development": "1.0.2",
-    "com.unity.learn.iet-framework": "3.1.3",
-    "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.probuilder": "5.2.2",
-    "com.unity.timeline": "1.8.6",
-    "com.unity.ugui": "2.0.0",
+    "com.unity.feature.cinematic": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr-content.xr-sim-environments": "file:../ContentPackages\\com.unity.xr-content.xr-sim-environments-1.0.0.tgz",
-    "com.unity.xr.arcore": "5.1.2",
-    "com.unity.xr.arfoundation": "5.1.2",
-    "com.unity.xr.arkit": "5.1.2",
+    "jillejr.newtonsoft.json-for-unity": "13.0.102",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -48,5 +36,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "jilleJr",
+      "url": "https://npm.cloudsmith.io/jillejr/newtonsoft-json-for-unity",
+      "scopes": [
+        "jillejr.newtonsoft.json-for-unity"
+      ]
+    }
+  ]
 }
